<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.opengl.GLSurfaceView
        android:id="@+id/surfaceview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="top" />

    <TextView
        android:id="@+id/wordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/red"
        tools:layout_editor_absoluteX="315dp"
        tools:layout_editor_absoluteY="4dp" />

    <TextView
        android:id="@+id/searchingTextView"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="59dp"
        android:layout_marginBottom="403dp"
        android:gravity="center"
        android:text="Please move the mobile phone slowly to find the plane"
        android:textColor="#ffffff"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="512dp" />

    <TextView
        android:id="@+id/plane_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="180"
        android:text="@string/plane_other"
        android:textColor="#ff2211"
        android:visibility="gone"
        tools:layout_editor_absoluteX="315dp"
        tools:layout_editor_absoluteY="4dp" />

    <TextView
        android:id="@+id/plane_floor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="180"
        android:text="@string/plane_floor"
        android:textColor="#ff2211"
        android:visibility="gone"
        tools:layout_editor_absoluteX="315dp"
        tools:layout_editor_absoluteY="4dp" />

    <TextView
        android:id="@+id/plane_wall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="180"
        android:text="@string/plane_wall"
        android:textColor="#ff2211"
        android:visibility="gone"
        tools:layout_editor_absoluteX="315dp"
        tools:layout_editor_absoluteY="4dp" />

    <TextView
        android:id="@+id/plane_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="180"
        android:text="@string/plane_table"
        android:textColor="#ff2211"
        android:visibility="gone"
        tools:layout_editor_absoluteX="315dp"
        tools:layout_editor_absoluteY="4dp" />

    <TextView
        android:id="@+id/plane_seat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="180"
        android:text="@string/plane_seat"
        android:textColor="#ff2211"
        android:visibility="gone"
        tools:layout_editor_absoluteX="315dp"
        tools:layout_editor_absoluteY="4dp" />

    <TextView
        android:id="@+id/plane_ceiling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="180"
        android:text="@string/plane_ceiling"
        android:textColor="#ff2211"
        android:visibility="gone"
        tools:layout_editor_absoluteX="315dp"
        tools:layout_editor_absoluteY="4dp" />


</RelativeLayout>